Bug 76970 - weston does not launch/display weston-calibrator
Summary: weston does not launch/display weston-calibrator
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-02 22:51 UTC by Anu Reddy
Modified: 2014-04-10 16:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-04-02 22:51:32 UTC
Weston does not launch weston-calibrator on single head display(touch screen) as well as multi-head display(touch screen) setup.  This makes it difficult where calibration is required. Cannot calibrate the touchscreen as an input touch devices without calibratoion values generated by weston-calibrator.

Steps:
1. Launch weston
2. Launch weston-calibrator. Observe weston-calibrator doesnot launch.


Environment:
wayland (master) heads/master-0-g1bf13ae
drm (master) heads/master-0-g1cb5fc7
mesa (master) heads/master-0-g64278b3
libva (master) heads/master-0-ge30e29a
intel-driver (master) heads/master-0-g75a7b09
cairo (master) heads/master-0-gbb17403
libinput (master) heads/master-0-ge49a988
weston (master) heads/master-0-gfe9671e
gstreamer (master) heads/master-0-gf85ce91
Comment 1 Kristian Høgsberg 2014-04-07 18:28:21 UTC
commit cdbbae2cac8b247511c37812253df65b7c69bf5b
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Mon Apr 7 11:28:05 2014 -0700

    window.c: Create xdg_surface up front
    
    Fixes initial fullscreen for calibrator.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=76970


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.